Figures and ReadMe update

--- a/Assignments/CE888 Assignment 1/CE888-Assignment1_IHDP.ipynb
+++ b/Assignments/CE888 Assignment 1/CE888-Assignment1_IHDP.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "['x', 't', 'yf', 'ycf', 'ite']"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -159,15 +159,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -183,12 +174,12 @@
     "axs[2].title.set_text('Y Counter Factuals')\n",
     "axs[3].title.set_text('Individual Treatment Effect')\n",
     "plt.show()\n",
-    "plt.savefig(\"ihdp_TreatmentAndElse.pdf\", dpi=1200)"
+    "fig.savefig(\"ihdp_TreatmentAndElse.pdf\", dpi=1200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +220,7 @@
        "4.016066896118338"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
