--- a/Assignments/CE888 Assignment 1/Datasets Notebooks/CE888-Assignment1_IHDP.ipynb
+++ b/Assignments/CE888 Assignment 1/Datasets Notebooks/CE888-Assignment1_IHDP.ipynb
@@ -16,16 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import sklearn\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split "
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "['x', 't', 'yf', 'ycf', 'ite']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "4.016066896118338"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,284 +244,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test, t_train, t_test, ite_train, ite_test = train_test_split(X, Yf, T, ite, test_size=0.3)"
+    "x_train, x_test, y_train, y_test, t_train, t_test, ite_train, ite_test = train_test_split(X, Yf, T, ite, test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LinearRegression()"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lr = LinearRegression()\n",
-    "lr.fit(np.concatenate([x_train, t_train], axis=1), y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y0_pred = lr.predict(np.concatenate([x_test, np.zeros_like(t_test)], axis=1))\n",
-    "y1_pred = lr.predict(np.concatenate([x_test, np.ones_like(t_test)], axis=1))"
+    "scaler_x = StandardScaler()\n",
+    "x_train = scaler_x.fit_transform(x_train)\n",
+    "x_test = scaler_x.transform(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]\n",
-      " [3.85432521]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "effect_pred = y1_pred - y0_pred\n",
-    "print(effect_pred)"
+    "rf = RandomForestRegressor()"
    ]
   }
  ],
