Progess in lab3

--- a/lab3/facebook.ipynb
+++ b/lab3/facebook.ipynb
@@ -509,9 +509,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Only two columns have missing values. Which ones?\n",
-    "\n",
-    "Most columns are numerical (int64 or float64). \n",
+    "Only two columns have missing values. Which ones?\r\n",
+    "\r\n",
+    "Most columns are numerical (int64 or float64). \r\n",
     "Column 'Type' is of type 'object', which, as it comes from a csv file, typically means strings. We can see this in the output of cell 2. It looks like it's a categorical feature, so we'll check how many categories there are and how many examples for each."
    ],
    "metadata": {}
