--- a/Assignments/CE888 Assignment 2/Datasets Notebooks/CE888-Assignment2_JOBS.ipynb
+++ b/Assignments/CE888 Assignment 2/Datasets Notebooks/CE888-Assignment2_JOBS.ipynb
@@ -312,7 +312,7 @@
         "outputId": "790d7929-3e12-48b1-e98b-fb1c4e006b7d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 440
+          "height": 441
         }
       },
       "outputs": [
@@ -355,7 +355,7 @@
         "outputId": "28ba1656-bece-40e1-a890-2ca02e295c2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203
+          "height": 204
         }
       },
       "outputs": [
@@ -523,7 +523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "U9q2CJG2vvK6"
       },
@@ -550,6 +550,110 @@
         "\n",
         "rf_e_in=rf_e_in.reshape(-1,1)\n",
         "rf_e_out=rf_e_out.reshape(-1,1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Metrics"
+      ],
+      "metadata": {
+        "id": "-qpaGa3iFkkN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Error on ATE\n",
+        "true_ate = 4.016\n",
+        "\n",
+        "rf_att_in = f.abs_att(rf_e_in, y_train, t_train, e_train)\n",
+        "rf_att_out = f.abs_att(rf_e_out, y_valid, t_valid, e_valid)\n",
+        "\n",
+        "\n",
+        "# PEHE\n",
+        "rf_pr_in = f.policy_risk(rf_e_in, y_train, t_train, e_train)\n",
+        "rf_pr_out = f.policy_risk(rf_e_out, y_valid, t_valid, e_valid)\n",
+        "\n",
+        "results = []\n",
+        "results.append(['RF', rf_att_in, rf_att_out, rf_pr_in, rf_pr_out])\n"
+      ],
+      "metadata": {
+        "id": "sW4lWmuHFlQm"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Hyperparameter Optimization"
+      ],
+      "metadata": {
+        "id": "Z6yENfh3GQl9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Defines parameter search space for Random Forests.\n",
+        "params = {\"max_leaf_nodes\": [10, 20, 30, None], \"n_estimators\": [5, 15, 20], \"max_features\": ['auto', 'sqrt'],}"
+      ],
+      "metadata": {
+        "id": "5lPpkxQHGR2Y"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rfGS = GridSearchCV(RandomForestRegressor(), param_grid=params, n_jobs=-1, cv=5)\n",
+        "\n",
+        "rfGS.fit(np.concatenate([x_train, t_train], axis=1), y_train.flatten())\n",
+        "\n",
+        "rfGS_y0_in = rfGS.predict(np.concatenate([x_valid, np.zeros_like(t_valid)], axis=1))\n",
+        "rfGS_y1_in = rfGS.predict(np.concatenate([x_valid, np.ones_like(t_valid)], axis=1))\n",
+        "\n",
+        "rfGS_y0_out = rfGS.predict(np.concatenate([x_test, np.zeros_like(t_test)], axis=1))\n",
+        "rfGS_y1_out = rfGS.predict(np.concatenate([x_test, np.ones_like(t_test)], axis=1))\n",
+        "\n",
+        "rfGS_e_in = rfGS_y1_in - rfGS_y0_in\n",
+        "rfGS_e_out = rfGS_y1_out - rfGS_y0_out\n",
+        "\n",
+        "rfGS_e_in=rf_e_in.reshape(-1,1)\n",
+        "rfGS_e_out=rf_e_out.reshape(-1,1)"
+      ],
+      "metadata": {
+        "id": "29edslanGU-6"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rfGS.best_params_"
+      ],
+      "metadata": {
+        "id": "EbmgJtgRGg-E",
+        "outputId": "051516a1-d307-45ee-9be4-4054beb74aa6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'max_features': 'auto', 'max_leaf_nodes': 10, 'n_estimators': 15}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
       ]
     }
   ],
